improved hot pixel filter by adding options to show hot pixels and control the rendering better